--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".ui.activities.LogoActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
@@ -28,7 +28,7 @@
         <activity android:name=".ui.activities.RegisterActivity"/>
         <activity android:name=".ui.activities.LoginActivity"/>
         <activity android:name=".ui.activities.PaymentActivity"/>
-        <activity android:name=".ui.activities.LogoActivity"/>
+        <activity android:name=".ui.activities.MainActivity"/>
     </application>
 
 </manifest>
