--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".ui.activities.LogoActivity"
+            android:name=".ui.activities.SplashActivity"
             android:label="@string/app_name"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
@@ -24,11 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.SplashActivity"/>
+        <activity android:name=".ui.activities.MainActivity"/>
         <activity android:name=".ui.activities.RegisterActivity"/>
         <activity android:name=".ui.activities.LoginActivity"/>
         <activity android:name=".ui.activities.PaymentActivity"/>
-        <activity android:name=".ui.activities.MainActivity"/>
+        <activity android:name=".ui.activities.LogoActivity"/>
     </application>
 
 </manifest>
